[bdist_wheel]
# use py2.py3 tag for pure-python dist:
universal=1

[metadata]
description_file = README.md

[flake8]
per-file-ignores =
		 wwpdb/apps/workmanager/workflow_access/OrderedDict.py: E704, E226, E, W, F
		 wwpdb/apps/workmanager/db_access/StatusDbApi.py: W504,E128,E127,E124,W291,E201
		 wwpdb/apps/workmanager/db_access/ContentDbApi.py: W504,E128,E127,E124,W291,E201,E501